control-plane/custom-gateway-api/conformance/tests/gateway-secret-missing-reference-grant.yaml
apiVersion: consul.networking.io/v1beta1
kind: Gateway
metadata:
  name: gateway-secret-missing-reference-grant
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: certificate
            namespace: gateway-conformance-web-backend
